re PR c++/28743 (ICE with invalid specialization)

PR c++/28743
        * decl2.c (check_classfn): Error rather than abort on parameter
        list mismatch.

From-SVN: r142212